--- a/Reference Apps/BrowsePhotoExample/BrowseProductsExample/MainStoryboard.storyboard
+++ b/Reference Apps/BrowsePhotoExample/BrowseProductsExample/MainStoryboard.storyboard
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="2843" systemVersion="11E53" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="a0c-xG-6v3">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="3084" systemVersion="11E53" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="a0c-xG-6v3">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="1929"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="2083"/>
     </dependencies>
     <scenes>
         <!--List Reviews Controller-->
         <scene sceneID="cPG-RZ-7H7">
             <objects>
                 <viewController id="Oxw-Ad-jTp" customClass="ListReviewsController" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="vLR-83-P1Q" customClass="List">
+                    <view key="view" contentMode="scaleToFill" id="vLR-83-P1Q">
                         <rect key="frame" x="0.0" y="64" width="320" height="416"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
@@ -332,6 +332,60 @@
     <resources>
         <image name="bv.jpg" width="180" height="200"/>
     </resources>
+    <classes>
+        <class className="ListReviewsController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/ListReviewsController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="tableView" candidateClass="UITableView"/>
+            </relationships>
+        </class>
+        <class className="ProductCell" superclassName="UITableViewCell">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/ProductCell.h"/>
+            <relationships>
+                <relationship kind="outlet" name="description" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="stars" candidateClass="StarRatingView"/>
+                <relationship kind="outlet" name="title" candidateClass="UILabel"/>
+            </relationships>
+        </class>
+        <class className="ProductDetailViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/ProductDetailViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="description" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="productImage" candidateClass="UIImageView"/>
+                <relationship kind="outlet" name="productTitle" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="ratingLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="reviewsTable" candidateClass="UITableView"/>
+            </relationships>
+        </class>
+        <class className="ReviewCell" superclassName="UITableViewCell">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/ReviewCell.h"/>
+            <relationships>
+                <relationship kind="outlet" name="author" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="image" candidateClass="UIImageView"/>
+                <relationship kind="outlet" name="review" candidateClass="UITextView"/>
+                <relationship kind="outlet" name="stars" candidateClass="StarRatingView"/>
+            </relationships>
+        </class>
+        <class className="ReviewDetailViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/ReviewDetailViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="review" candidateClass="UITextView"/>
+                <relationship kind="outlet" name="reviewImage" candidateClass="UIImageView"/>
+                <relationship kind="outlet" name="reviewTitle" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="starRating" candidateClass="StarRatingView"/>
+            </relationships>
+        </class>
+        <class className="SearchViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/SearchViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="performSearch:"/>
+                <relationship kind="outlet" name="searchBox" candidateClass="UITextField"/>
+            </relationships>
+        </class>
+        <class className="StarRatingView" superclassName="UIView">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/StarRatingView.h"/>
+        </class>
+    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar" statusBarStyle="blackTranslucent"/>
         <simulatedOrientationMetrics key="orientation"/>
